--- a/MU.Core/MU.csproj
+++ b/MU.Core/MU.csproj
@@ -3,12 +3,32 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Authors>Msin</Authors>
+    <Company>MsinProductions</Company>
+    <PackageId>Msin.Mu.NET</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>The first version of the MU riddle.</Description>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/asiermarin/MU</PackageProjectUrl>
+    <PackageIcon>Science-Mu-icon.png</PackageIcon>
+    <RepositoryUrl>https://github.com/asiermarin/MU</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <NeutralLanguage>es-ES</NeutralLanguage>
+    <PackageReleaseNotes>First Version.</PackageReleaseNotes>
+    <PackageTags>Nothing.</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="NUnit" Version="3.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Pictures\Science-Mu-icon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
